--- a/package.json
+++ b/package.json
@@ -4,9 +4,12 @@
   "description": "Dashboard react",
   "private": false,
   "main": "dist/index.js",
+  "homepage": "https://josueodh.github.io/bootcamp-appmasters",
   "dependencies": {
     "@material-ui/core": "3.9.2",
     "@material-ui/icons": "3.0.2",
+    "@material-ui/lab": "^4.0.0-alpha.56",
+    "@material-ui/styles": "^4.10.0",
     "@types/chartist": "^0.9.48",
     "@types/classnames": "^2.2.8",
     "@types/react": "^16.8.20",
@@ -15,7 +18,9 @@
     "axios": "^0.19.2",
     "chartist": "0.10.1",
     "classnames": "2.2.6",
+    "gh-pages": "^3.1.0",
     "history": "4.7.2",
+    "moment": "^2.27.0",
     "perfect-scrollbar": "1.4.0",
     "prettier": "1.16.4",
     "react": "^16.8.1",
@@ -38,7 +43,9 @@
     "lint:check": "eslint . --ext=js,jsx;  exit 0",
     "lint:fix": "eslint . --ext=js,jsx --fix;  exit 0",
     "build-package-css": "cp src/assets/css/material-dashboard-react.css dist/material-dashboard-react.css",
-    "build-package": "npm run build-package-css && babel src --out-dir dist"
+    "build-package": "npm run build-package-css && babel src --out-dir dist",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "keywords": [],
   "author": "Creative Tim",
