--- a/package.json
+++ b/package.json
@@ -10,13 +10,16 @@
     "@material-ui/icons": "3.0.2",
     "@material-ui/lab": "^4.0.0-alpha.56",
     "@material-ui/styles": "^4.10.0",
+    "@types/chart.js": "^2.9.23",
     "@types/chartist": "^0.9.48",
     "@types/classnames": "^2.2.8",
     "@types/react": "^16.8.20",
     "@types/react-dom": "^16.8.4",
     "@types/react-router-dom": "^4.3.4",
+    "@types/recharts": "^1.8.14",
     "axios": "^0.19.2",
     "chartist": "0.10.1",
+    "chartist-plugin-legend": "^0.6.2",
     "classnames": "2.2.6",
     "gh-pages": "^3.1.0",
     "history": "4.7.2",
@@ -30,6 +33,7 @@
     "react-router-dom": "4.3.1",
     "react-scripts": "2.1.5",
     "react-swipeable-views": "0.13.1",
+    "recharts": "^1.8.5",
     "tslint": "^5.17.0",
     "tslint-react": "^4.0.0",
     "typescript": "^3.5.2"
